# CAPTCHA-Recognition-CRNN

./: .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
configs/: data.yaml  inference.yaml  model.yaml  training.yaml
configs/dataset/: base.yaml  transforms.yaml
scripts/: download_data.py  export_model.py  infer.py  train.py
src/data/: dataset.py
src/models/: lacc.py
src/utils/: logging.py
